--- a/style.css
+++ b/style.css
@@ -405,3 +405,10 @@ section {
 .view-prev-btn {
   transition: 0.2s;
 }
+.cart-empty {
+  text-align: center;
+  margin: 4rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: hsl(219, 9%, 45%);
+}
